# librdkafka-fake

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  USAGE.md
conan/: conanfile.txt
src/: CMakeLists.txt  conf.cxx  consumer.cxx  error.cxx  message.cxx  producer.cxx  rdkafka.cxx  rdkafka.h  rdkafka_conf.h  rdkafka_int.h  topic_partition.cxx
src-cpp/: CMakeLists.txt  ConfImpl.cpp  HandleImpl.cpp  KafkaConsumerImpl.cpp  MetadataImpl.cpp  MockImpl.cpp  RdKafka.cpp  TopicPartitionImpl.cpp  definitions.h  rdkafkacpp.h  rdkafkacpp_int.h  utils.cxx  utils.h
tests/: CMakeLists.txt  configuration-cpp.cxx  configuration.cxx  consumer-cpp.cxx  consumer.cxx  handle-cpp.cxx  metadata-cpp.cxx  metadata.cxx  rdkafka.cxx  topic_partition-cpp.cxx  topic_partition.cxx
utils/: CMakeLists.txt  definitions.h  storage.h  utils.cxx  utils.h
